<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/settingsSpoilersContent"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  tools:theme="@style/AppTheme"
  >

  <TextView
    android:id="@+id/settingsCategorySpoilers"
    style="@style/Settings.Category"
    android:text="@string/textSettingsSpoilers"
    />

  <LinearLayout
    android:id="@+id/settingsSpoilersShows"
    style="@style/Settings.ItemLayout"
    android:layout_width="match_parent"
    >

    <TextView
      style="@style/Settings.Title"
      android:text="@string/textSettingsSpoilersShows"
      />

    <TextView
      style="@style/Settings.Summary"
      android:text="@string/textSettingsSpoilersShowsSummary"
      />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/settingsSpoilersMovies"
    style="@style/Settings.ItemLayout"
    android:layout_width="match_parent"
    >

    <TextView
      style="@style/Settings.Title"
      android:text="@string/textSettingsSpoilersMovies"
      />

    <TextView
      style="@style/Settings.Summary"
      android:text="@string/textSettingsSpoilersMoviesSummary"
      />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/settingsSpoilersEpisodes"
    style="@style/Settings.ItemLayout"
    android:layout_width="match_parent"
    >

    <TextView
      style="@style/Settings.Title"
      android:text="@string/textSettingsSpoilersEpisodes"
      />

    <TextView
      style="@style/Settings.Summary"
      android:text="@string/textSettingsSpoilersEpisodesSummary"
      />

  </LinearLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsSpoilersTapToReveal"
    style="@style/Settings.ItemLayout"
    android:layout_width="match_parent"
    >

    <TextView
      android:id="@+id/settingsSpoilersTapToRevealTitle"
      style="@style/Settings.Title"
      android:text="@string/textSettingsSpoilersTapToRevealTitle"
      app:layout_constraintBottom_toTopOf="@id/settingsSpoilersTapToDescription"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      />

    <TextView
      android:id="@+id/settingsSpoilersTapToDescription"
      style="@style/Settings.Summary"
      android:layout_marginEnd="@dimen/spaceSmall"
      android:text="@string/textSettingsSpoilersTapToRevealDescription"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/settingsSpoilersTapToRevealSwitch"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsSpoilersTapToRevealTitle"
      />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/settingsSpoilersTapToRevealSwitch"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:background="@null"
      android:checked="false"
      android:clickable="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>