<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/settingsContent"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:theme="@style/AppTheme"
  >

  <TextView
    android:id="@+id/settingsCategoryWidgets"
    style="@style/Settings.Category"
    android:text="@string/textSettingsWidgets"
    app:layout_constraintBottom_toTopOf="@id/settingsWidgetsTheme"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsWidgetsLabels"
    style="@style/Settings.ItemLayout"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/settingsWidgetsTransparency"
    >

    <TextView
      android:id="@+id/settingsWidgetsLabelsTitle"
      style="@style/Settings.Title"
      android:text="@string/textSettingsWidgetsLabelsTitle"
      app:layout_constraintBottom_toTopOf="@id/settingsWidgetsLabelsDescription"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      />

    <TextView
      android:id="@+id/settingsWidgetsLabelsDescription"
      style="@style/Settings.Summary"
      android:layout_marginEnd="@dimen/spaceSmall"
      android:text="@string/textSettingsWidgetsLabelsSummary"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/settingsWidgetsLabelsSwitch"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsWidgetsLabelsTitle"
      tools:text="@tools:sample/lorem/random"
      />

    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/settingsWidgetsLabelsSwitch"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:background="@null"
      android:checked="true"
      android:clickable="false"
      app:layout_constraintBottom_toBottomOf="@id/settingsWidgetsLabels"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/settingsWidgetsLabels"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <LinearLayout
    android:id="@+id/settingsWidgetsTheme"
    style="@style/Settings.ItemLayout"
    android:tag="@string/tagTheme"
    app:layout_constraintBottom_toTopOf="@+id/settingsWidgetsTransparency"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settingsCategoryWidgets"
    >

    <TextView
      android:id="@+id/settingsWidgetsThemeTitle"
      style="@style/Settings.Title"
      android:drawablePadding="@dimen/spaceSmall"
      android:text="@string/textSettingsThemeWidgetsTitle"
      app:drawableStartCompat="@drawable/ic_crown_small"
      app:drawableTint="?android:attr/textColorPrimary"
      />

    <TextView
      style="@style/Settings.Summary"
      android:layout_width="wrap_content"
      android:text="@string/textSettingsThemeWidgetsSummary"
      />

  </LinearLayout>

  <TextView
    android:id="@+id/settingsWidgetsThemeValue"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/spaceNormal"
    android:gravity="end"
    android:minWidth="50dp"
    android:text="@string/textThemeDark"
    android:textColor="?attr/colorAccent"
    app:layout_constraintBottom_toBottomOf="@id/settingsWidgetsTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/settingsWidgetsTheme"
    />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsWidgetsTransparency"
    style="@style/Settings.ItemLayout"
    android:tag="@string/tagWidgetTransparency"
    app:layout_constraintBottom_toTopOf="@id/settingsWidgetsLabels"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settingsWidgetsTheme"
    >

    <TextView
      android:id="@+id/settingsWidgetsTransparencyTitle"
      style="@style/Settings.Title"
      android:text="@string/textSettingsWidgetsTransparencyTitle"
      android:drawablePadding="@dimen/spaceSmall"
      app:drawableStartCompat="@drawable/ic_crown_small"
      app:drawableTint="?android:attr/textColorPrimary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      />

    <TextView
      android:id="@+id/settingsWidgetsTransparencyDescription"
      style="@style/Settings.Summary"
      android:layout_width="wrap_content"
      android:layout_marginEnd="@dimen/spaceSmall"
      android:text="@string/textSettingsWidgetsTransparencySummary"
      app:layout_constrainedWidth="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/settingsWidgetsTransparencyValue"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/settingsWidgetsTransparencyTitle"
      tools:text="@tools:sample/lorem/random"
      />

    <TextView
      android:id="@+id/settingsWidgetsTransparencyValue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:minWidth="50dp"
      android:text="@string/textNo"
      android:textColor="?attr/colorAccent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>